--- a/views/profile_care.ejs
+++ b/views/profile_care.ejs
@@ -51,21 +51,13 @@
 
 </head>
 
-<body>
+<body style="background-color:#f5f2ef">
 
-<!-- Navbar -->
-<nav class="navbar lpnav navbar-expand-lg bg-dark navbar-dark mb-4">
+<!-- Navbar --><nav class="navbar lpnav navbar-expand-lg mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><b>CareClub</b></a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <a class="navbar-brand" href="/" style=" font-size: 40px; font-family: Tac One, sans-serif;color:#e84d74;"><b>CareClub</b></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -73,7 +65,7 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
-        
+
         <li class="nav-item">
           <a class="nav-link active" href="/events">Events</a>
         </li>
@@ -81,22 +73,17 @@
           <a class="nav-link active" aria-current="page" href="/trending">Trending</a>
         </li>
         <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle active"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
+          <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
             Profile
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/profile">My Profile</a></li>
             <li><a class="dropdown-item" href="/logout">Logout</a></li>
-           
-            
+
+
           </ul>
-  
+
       </ul>
 
     </div>
@@ -124,7 +111,7 @@
             <div class="container py-2">
               <div class="row">
                 <div class="col-lg-4">
-                  <div class="card mb-4 bg-dark text-primary">
+                  <div class="card mb-4 bg-dark text-primary" style="position: relative;top:0.8em">
                     <div class="card-body text-center">
                       <!-- <img src="<%= user.Image_URL %>" alt="avatar" -->
                       <img src=<%= user.Image_URL ==null ?"/images/event/7309681.jpg":user.Image_URL %> alt="avatar"
@@ -139,7 +126,7 @@
                     </div>
                   </div>
 
-                  <div class="col-lg-12">
+                  <div class="col-lg-12" style="position: relative;top:0.8em">
                     <div class="card mb-4 bg-dark text-primary">
                       <div class="card-body">
                         <div class="row">
@@ -186,16 +173,16 @@
        
  <!------------------------------------------------- Tab content -------------------------------------------------------- -->
  
- <div class=" col-lg-5 col-md-5 col-xs-5 col-sm-7 me-4 text-light">
+ <div class=" col-lg-5 col-md-5 col-xs-5 col-sm-7 me-4 ">
    
   <div class="tab-content">
     
      <div class="tabs__tab active" id="tab_1" data-tab-info>
-  <h3 class="text-white bg-dark text-center py-3" style="border-radius:20px;">Created Events</h3>
+  <h3 class="text-dark  text-center py-3" style="border-radius:20px;background-color: white;">Created Events</h3><br>
   <% if ( orgEvents !== null) { %>
          
     <% orgEvents.forEach(events => {%> <!-- showing event  details -->
-    <div class="card mb-2 bg-dark text-white"><h5 class="card-title">
+    <div class="card mb-2 text-dark" style="background-color: white;"><h5 class="card-title">
              <div class="container">
              <br>
              
